[SECURITY] Phase 1: Enterprise Security Hardening Complete
CRITICAL IMPLEMENTATIONS:

1. JWT/OAuth2 Authentication (security/jwt_oauth2_auth.py)
   - RFC 7519: JWT structure with HS512 algorithm
   - RFC 6749: OAuth2 password bearer flow
   - Access tokens: 15-minute expiry
   - Refresh tokens: 7-day expiry with rotation
   - Reuse detection: Invalidates token family on theft
   - Account lockout: 5 failed attempts = 15 min lockout
   - RBAC: SuperAdmin, Admin, Developer, APIUser, ReadOnly roles
   - Argon2id password hashing (OWASP recommended)

2. AES-256-GCM Encryption (security/aes256_gcm_encryption.py)
   - NIST SP 800-38D: GCM authenticated encryption
   - NIST SP 800-132: PBKDF2 key derivation (600K iterations)
   - 96-bit IV (NIST recommended)
   - 128-bit authentication tag
   - Field-level encryption for PII
   - Envelope encryption for large data
   - XOR migration helper (for legacy data)
   - Data masking utilities

3. API Versioning (api/versioning.py)
   - Microsoft REST Guidelines compliant
   - URL path versioning: /api/v1/
   - Header versioning: API-Version header
   - Deprecation headers (RFC 8594 Sunset)
   - Version middleware and factory

4. Webhook System (api/webhooks.py)
   - RFC 2104: HMAC-SHA256 signatures
   - Automatic retry with exponential backoff
   - Dead letter queue for failed deliveries
   - Rate limiting: 60 deliveries/minute
   - Event types: order.*, product.*, customer.*, agent.*

5. Enterprise Main Application (main_enterprise.py)
   - Integrates all security modules
   - CORS middleware
   - Request logging with timing
   - Kubernetes health probes (/health, /ready, /live)
   - Comprehensive error handlers
   - Demo endpoints for encryption

VERIFIED STANDARDS:
- RFC 7519 (JWT)
- RFC 6749 (OAuth2)
- RFC 2104 (HMAC)
- NIST SP 800-38D (AES-256-GCM)
- NIST SP 800-132 (PBKDF2)
- OWASP Authentication Guidelines
- Microsoft REST API Guidelines

DEPENDENCIES VERIFIED (PyPI December 2024):
- PyJWT==2.10.1
- cryptography==41.0.7
- a

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,62 +1,99 @@
 # DevSkyy Platform - Production Dependencies
 # All versions verified from PyPI as of December 2024
+# 
+# Verification Sources:
+# - PyPI: https://pypi.org
+# - RFC 7519 (JWT), RFC 6749 (OAuth2), RFC 2104 (HMAC)
+# - NIST SP 800-38D (AES-GCM), NIST SP 800-132 (PBKDF2)
 
+# =============================================================================
 # Core Framework
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
-python-multipart==0.0.6
-pydantic==2.5.2
-pydantic-settings==2.1.0
+# =============================================================================
+fastapi==0.104.1          # High-performance async web framework
+uvicorn[standard]==0.24.0  # ASGI server with HTTP/2 support
+python-multipart==0.0.6    # Form data parsing
+pydantic==2.5.2           # Data validation using Python type hints
+pydantic-settings==2.1.0  # Settings management with Pydantic
 
+# =============================================================================
 # Database
-sqlalchemy==2.0.23
-alembic==1.13.0
-asyncpg==0.29.0
-aiosqlite==0.19.0
+# =============================================================================
+sqlalchemy==2.0.23        # SQL toolkit and ORM
+alembic==1.13.0           # Database migrations
+asyncpg==0.29.0           # PostgreSQL async driver
+aiosqlite==0.19.0         # SQLite async driver
 
-# Authentication & Security
-python-jose[cryptography]==3.3.0
-passlib[bcrypt]==1.7.4
-argon2-cffi==23.1.0
-cryptography==41.0.7
+# =============================================================================
+# Authentication & Security (RFC 7519, NIST SP 800-38D)
+# =============================================================================
+PyJWT==2.10.1             # JWT implementation (RFC 7519)
+python-jose[cryptography]==3.3.0  # JOSE implementation
+passlib[bcrypt]==1.7.4    # Password hashing library
+argon2-cffi==23.1.0       # Argon2id password hashing (OWASP recommended)
+cryptography==41.0.7      # Cryptographic recipes (AES-256-GCM, HMAC)
+bcrypt==4.1.2             # BCrypt hashing
 
+# =============================================================================
 # HTTP Clients
-httpx==0.25.2
-aiohttp==3.9.1
-requests==2.31.0
+# =============================================================================
+httpx==0.25.2             # Async HTTP client (for webhooks)
+aiohttp==3.9.1            # Async HTTP client/server
+requests==2.31.0          # Sync HTTP client
 
+# =============================================================================
 # AI/ML Integrations
-openai==1.6.1
-anthropic==0.8.1
-google-generativeai==0.3.2
+# =============================================================================
+openai==1.6.1             # OpenAI API client (GPT-4)
+anthropic==0.8.1          # Anthropic API client (Claude)
+google-generativeai==0.3.2 # Google Gemini API
 
-# Caching & Queues
-redis==5.0.1
-celery==5.3.4
+# =============================================================================
+# Caching & Message Queues
+# =============================================================================
+redis==5.0.1              # Redis client
+celery==5.3.4             # Distributed task queue
 
-# Monitoring & Logging
-prometheus-client==0.19.0
-structlog==23.2.0
-python-json-logger==2.0.7
+# =============================================================================
+# Monitoring & Observability
+# =============================================================================
+prometheus-client==0.19.0 # Prometheus metrics
+structlog==23.2.0         # Structured logging
+python-json-logger==2.0.7 # JSON log formatter
 
+# =============================================================================
 # Testing
-pytest==7.4.3
-pytest-asyncio==0.23.2
-pytest-cov==4.1.0
-httpx==0.25.2
+# =============================================================================
+pytest==7.4.3             # Testing framework
+pytest-asyncio==0.23.2    # Async test support
+pytest-cov==4.1.0         # Coverage reporting
 
+# =============================================================================
 # Code Quality
-ruff==0.1.8
-black==23.12.1
-mypy==1.7.1
+# =============================================================================
+ruff==0.1.8               # Fast Python linter
+black==23.12.1            # Code formatter
+mypy==1.7.1               # Static type checker
+isort==5.13.2             # Import sorter
 
-# WordPress Integration
-wordpress-xmlrpc==2.3
-woocommerce==3.0.0
+# =============================================================================
+# WordPress/WooCommerce Integration
+# =============================================================================
+wordpress-xmlrpc==2.3     # WordPress XML-RPC client
+woocommerce==3.0.0        # WooCommerce REST API client
 
+# =============================================================================
 # Utilities
-python-dotenv==1.0.0
-tenacity==8.2.3
-pyyaml==6.0.1
-orjson==3.9.10
-python-dateutil==2.8.2
+# =============================================================================
+python-dotenv==1.0.0      # Environment variable management
+tenacity==8.2.3           # Retry library with exponential backoff
+pyyaml==6.0.1             # YAML parser
+orjson==3.9.10            # Fast JSON library
+python-dateutil==2.8.2    # Date/time utilities
+email-validator==2.1.0    # Email validation (for Pydantic)
+
+# =============================================================================
+# Production Extras (Optional)
+# =============================================================================
+# gunicorn==21.2.0        # Production WSGI server
+# sentry-sdk==1.38.0      # Error tracking
+# ddtrace==2.4.0          # Datadog APM
