[CLEANUP] Move legacy files, update docs for pyproject.toml
Changes:
- Moved legacy files to legacy/ folder:
  - complete_working_platform.py
  - sqlite_auth_system.py
  - autonomous_commerce_engine.py
  - prompt_system.py

- Updated all documentation to use pyproject.toml:
  - DEPLOYMENT_GUIDE.md: pip install -e ".[dev]"
  - AGENTS.md: Updated CI workflow
  - README.md: Modern installation instructions
  - CLAUDE.md: New directory structure
  - PUSH_INSTRUCTIONS.md: Updated stats and commands

- Added .env.example with all environment variables
- Updated .gitignore to allow .env.example

File references updated:
- main.py → main_enterprise.py
- requirements.txt → pyproject.toml
- agent.database → database.db

--- a/.gitignore
+++ b/.gitignore
@@ -52,8 +52,9 @@ coverage.xml
 
 # Secrets & Environment
 .env
-.env.*
-*.local
+.env.local
+.env.*.local
+!.env.example
 secrets/
 credentials/
 *.pem
