--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,8 +10,8 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "devskyy"
-version = "2.0.0"
-description = "AI-driven multi-agent orchestration platform for enterprise e-commerce automation"
+version = "3.0.0"
+description = "AI-driven multi-agent orchestration platform for enterprise e-commerce automation with WordPress/WooCommerce integration, 3D asset generation, and LangGraph workflows"
 readme = "README.md"
 license = { text = "MIT" }
 requires-python = ">=3.11"
@@ -67,6 +67,7 @@ dependencies = [
     "httpx>=0.25",
     "aiohttp>=3.9",
     "requests>=2.31",
+    "aiofiles>=23.2",
     
     # Utilities
     "python-dotenv>=1.0",
@@ -144,7 +145,7 @@ devskyy = "main_enterprise:main"
 
 [tool.setuptools.packages.find]
 where = ["."]
-include = ["api*", "security*", "database*"]
+include = ["api*", "security*", "database*", "wordpress*", "agents*", "orchestration*"]
 
 [tool.ruff]
 target-version = "py311"
@@ -203,7 +204,7 @@ filterwarnings = [
 ]
 
 [tool.coverage.run]
-source = ["api", "security", "database"]
+source = ["api", "security", "database", "wordpress", "agents", "orchestration"]
 branch = true
 omit = ["tests/*", "*/__init__.py"]
 
