--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 # DevSkyy Platform Dependencies
-# 
+#
 # This file is for backward compatibility with pip-only environments.
 # The canonical dependency source is pyproject.toml
 #
@@ -41,8 +41,9 @@ httpx>=0.25
 aiohttp>=3.9
 requests>=2.31
 
-# AI/ML (optional - uncomment if needed)
-# openai>=1.6
+# AI/ML & MCP Server
+openai>=1.6
+mcp>=0.9.0
 # anthropic>=0.8
 # google-generativeai>=0.3
 
