--- a/.env.example
+++ b/.env.example
@@ -11,9 +11,10 @@ LOG_LEVEL=INFO
 # =============================================================================
 # Security (REQUIRED for production)
 # =============================================================================
-# Generate with: python -c "import secrets; print(secrets.token_urlsafe(32))"
-JWT_SECRET_KEY=your-jwt-secret-key-change-in-production
-ENCRYPTION_MASTER_KEY=your-encryption-key-change-in-production
+# Generate JWT key with: python -c "import secrets; print('JWT_SECRET_KEY=' + secrets.token_urlsafe(64))"
+# Generate encryption key with: python -c "import secrets, base64; print('ENCRYPTION_MASTER_KEY=' + base64.b64encode(secrets.token_bytes(32)).decode())"
+JWT_SECRET_KEY=your-jwt-secret-key-change-in-production-64-chars-minimum
+ENCRYPTION_MASTER_KEY=your-base64-encoded-32-byte-encryption-key-for-aes256
 
 # =============================================================================
 # Database
