--- a/config/typescript/tsconfig.json
+++ b/config/typescript/tsconfig.json
@@ -16,8 +16,8 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": false,
-    "outDir": "./dist",
-    "rootDir": "./src",
+    "outDir": "../../dist",
+    "rootDir": "../../src",
     "declaration": true,
     "declarationMap": true,
     "sourceMap": true,
@@ -34,7 +34,7 @@
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
     "jsx": "react-jsx",
-    "baseUrl": ".",
+    "baseUrl": "../..",
     "paths": {
       "@/*": ["src/*"],
       "@/components/*": ["src/components/*"],
@@ -49,19 +49,16 @@
     },
     "types": ["node", "jest", "@types/three"]
   },
-  "include": ["src/**/*"],
+  "include": ["../../src/**/*"],
   "exclude": [
-    "node_modules",
-    "dist",
-    "build",
-    "coverage",
-    ".next",
-    ".nuxt",
-    "tests",
-    "examples",
-    "*.config.js",
-    "*.config.ts",
-    "*.jsx"
+    "../../node_modules",
+    "../../dist",
+    "../../build",
+    "../../coverage",
+    "../../.next",
+    "../../.nuxt",
+    "../../tests",
+    "../../examples"
   ],
   "ts-node": {
     "esm": true,
