--- a/requirements.txt
+++ b/requirements.txt
@@ -44,8 +44,13 @@ requests>=2.31
 # AI/ML & MCP Server
 openai>=1.6
 mcp>=0.9.0
-# anthropic>=0.8
-# google-generativeai>=0.3
+
+# LLM Provider SDKs (Official)
+anthropic>=0.75.0
+google-genai>=1.50.0
+cohere>=5.20.0
+mistralai>=1.9.0
+groq>=0.37.0
 
 # Caching (optional)
 # redis>=5.0
