feat(asset-pipeline): Implement automated 3D asset generation pipeline
Phase 1: API Credentials Configuration
- Updated .env.example with Tripo3D and FASHN API configuration
- Enhanced scripts/verify_env.py with 3D Asset Pipeline validation
- Updated scripts/generate_secrets.py with asset pipeline documentation

Phase 2: Agent Enhancements
- agents/tripo_agent.py: Added tenacity retry logic, texture quality settings
- agents/fashn_agent.py: Added tenacity retry logic, batch processing
- agents/wordpress_asset_agent.py: Added 3D model upload method

Phase 3: Asset Orchestrator
- Created orchestration/asset_pipeline.py with ProductAssetPipeline class
- Supports apparel, accessory, footwear categories
- Integrates Tripo3D, FASHN, and WordPress agents

Phase 4: CI/CD Integration
- Created .github/workflows/asset-generation.yml
- Manual dispatch and webhook triggers
- Created scripts/run_asset_pipeline.py CLI

Phase 5: Testing
- Added 28 tests for agents and pipeline
- All tests passing

Phase 6: Monitoring
- Added Prometheus metrics (optional)
- Counters: asset_generation_total, asset_generation_errors_total
- Histogram: asset_generation_duration_seconds
- Gauge: pipeline_active

--- a/.env.example
+++ b/.env.example
@@ -43,6 +43,22 @@ ANTHROPIC_API_KEY=sk-ant-...
 GOOGLE_AI_API_KEY=...
 
 # =============================================================================
+# 3D Asset Generation - Tripo3D
+# Get your API key from: https://www.tripo3d.ai/dashboard
+# =============================================================================
+TRIPO_API_KEY=your-tripo3d-api-key
+TRIPO_API_BASE_URL=https://api.tripo3d.ai/v2
+TRIPO_OUTPUT_DIR=./generated_assets/3d
+
+# =============================================================================
+# Virtual Try-On - FASHN
+# Get your API key from: https://fashn.ai/dashboard
+# =============================================================================
+FASHN_API_KEY=your-fashn-api-key
+FASHN_API_BASE_URL=https://api.fashn.ai/v1
+FASHN_OUTPUT_DIR=./generated_assets/tryon
+
+# =============================================================================
 # WordPress/WooCommerce
 # =============================================================================
 WORDPRESS_URL=https://your-site.com
